--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
     "name": "about-moosegoose-cli",
     "version": "1.1.0",
+    "description": "Get to know the Moose Goose via `npx about-moosegoose-cli` or `amg`.",
     "bin": {
         "amg": "index.js"
     },
     "dependencies": {
-        "clear-any-console": "^1.16.2"
+        "cli-welcome": "^2.2.2"
     }
 }
