--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "amg": "index.js"
     },
     "dependencies": {
+        "chalk": "^4.1.2",
         "cli-welcome": "^2.2.2"
     },
     "keywords": [
